Sun May 25 08:43:16 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/logger.rb: refactored to include Logger::Period.

Sun May 25 06:50:19 2014  Zachary Scott  <e@zzak.io>

	* vm_eval.c: [DOC] Improve instance_eval description when given a
	  block or String arguments. By @nathanl via documenting-ruby/ruby#28

Sun May 25 06:29:39 2014  Zachary Scott  <e@zzak.io>

	* array.c: [DOC] Clarify default argument for Array.new.
	  By @Elffers [Fixes GH-610]

Sat May 24 22:37:20 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* array.c: [DOC] Add more documents to shuffle! and shuffle.
	  Contributed by @JuanitoFatas [ci skip][fix GH-612]

Sat May 24 22:28:55 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/lib/minitest/.document: removed unused configuration.

Sat May 24 19:08:47 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/spec.rb: Unused file removed.

	* test/lib/minitest/autorun.rb: Don't require minitest/spec.

	* test/lib/minitest/benchmark.rb: Ditto.

Sat May 24 18:45:30 2014  Tanaka Akira  <akr@fsij.org>

	* test/benchmark/test_benchmark.rb: Use test/unit.

Sat May 24 16:20:59 2014  Eric Wong  <e@80x24.org>

	* process.c (proc_getgroups, proc_setgroups): use ALLOCV_N
	  [Bug #9856]

Sat May 24 15:49:39 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb (parallelize_me!): Removed.
	  This fixes the line-by-line structure of the test result in verbose
	  mode.  [ruby-core:54905]

	* test/lib/minitest/parallel_each.rb: Removed.

	* test/minitest/test_minitest_mock.rb: Don't call parallelize_me!.

	* test/minitest/test_minitest_spec.rb: Ditto.

	* test/minitest/test_minitest_unit.rb: Ditto.
	  Tests for parallel feature removed.

Sat May 24 15:29:10 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/hell.rb: Unused file removed.

	* test/lib/minitest/pride.rb: Ditto.

Sat May 24 15:05:32 2014  yui-knk  <spiketeika@gmail.com>

	* enumerator.c (yielder_yield_push): Insert a break after the